Fix use of http scheme for catalogue.linked.data.gov.au
For requests to catalogue.linked.data.gov.au using the
http scheme, return redirects using scheme https,
rather than proxying to the (now non-existent) IP
address of the old virtual machine ...

In the response headers returned from catalogue.linked.data.gov.au,
set the scheme in the Location header to "https" for internal redirects.

--- a/conf/catalogue.linked.data.gov.au-le-ssl.conf
+++ b/conf/catalogue.linked.data.gov.au-le-ssl.conf
@@ -4,13 +4,12 @@
 
         RewriteEngine  on
 	ProxyPreserveHost On
-        # ProxyPass "/"  "http://203.101.224.217/"
-        # ProxyPassReverse "/"  "http://203.101.224.217/"
         ProxyPass "/"  "http://203.101.231.11/"
         ProxyPassReverse "/"  "http://203.101.231.11/"
+        Header edit Location ^http://catalogue\.linked\.data\.gov\.au(.*)$ https://catalogue.linked.data.gov.au$1
 
+Include /etc/letsencrypt/options-ssl-apache.conf
 SSLCertificateFile /etc/letsencrypt/live/catalogue.linked.data.gov.au/fullchain.pem
 SSLCertificateKeyFile /etc/letsencrypt/live/catalogue.linked.data.gov.au/privkey.pem
-Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
 </IfModule>
