--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -45,6 +45,13 @@
         RewriteRule ^/def/australian-phone-area-codes(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=australian-phone-area-codes&uri=http://linked.data.gov.au/def/australian-phone-area-codes$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/australian-phone-area-codes(.*)$ "https://vocabs.gsq.digital/object?vocab_id=australian-phone-area-codes&uri=http://linked.data.gov.au/def/australian-phone-area-codes$1" [R=302,NE,L]
 
+        # https://linked.data.gov.au/def/care
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/care(.*)$                  https://idn-au.github.io/care-voc/care.ttl [R=302,L]
+        RewriteRule ^/def/care(.*).ttl$              https://idn-au.github.io/care-voc/care.ttl [R=302,L]
+        RewriteRule ^/def/care(.*)$                  https://idn-au.github.io/care-voc/care.html$1 [R=302,L]
+
         # Multiple Vocabs: TERN's CorVeg
         # http://linked.data.gov.au/def/corveg-cv
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -71,6 +78,20 @@
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
         RewriteRule ^/def/gba(.*).rdf$                          http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1 [R=302,L]
+
+	# https://linked.data.gov.au/def/idn-role-codes
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/idn-role-codes(.*)$                  https://idn-au.github.io/idn-role-codes-voc/idn-role-codes.ttl [R=302,L]
+        RewriteRule ^/def/idn-role-codes(.*).ttl$              https://idn-au.github.io/idn-role-codes-voc/idn-role-codes.ttl [R=302,L]
+        RewriteRule ^/def/idn-role-codes(.*)$                  https://idn-au.github.io/idn-role-codes-voc/idn-role-codes.html$1 [R=302,L]
+
+        # https://linked.data.gov.au/def/nrm
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/nrm				       https://linkeddata.tern.org.au/api/v1.0/resource?repository_id=dawe_vocabs_core&uri=https://linked.data.gov.au/def/nrm [R=302,L]
+        RewriteRule ^/def/nrm.ttl			       https://linkeddata.tern.org.au/api/v1.0/resource?repository_id=dawe_vocabs_core&uri=https://linked.data.gov.au/def/nrm [R=302,L]
+        RewriteRule ^/def/nrm                                  https://linkeddata.tern.org.au/viewers/dawe-vocabs?uri=https://linked.data.gov.au/def/nrm [R=302,L]
 
         # http://linked.data.gov.au/def/reg-roles
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -111,6 +132,13 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/australian-states-and-territories(.*)$ "https://vocabs.gsq.digital/object?vocab_id=australian-states-and-territories&uri=http://linked.data.gov.au/def/australian-states-and-territories$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/australian-states-and-territories(.*)$ "https://vocabs.gsq.digital/object?vocab_id=australian-states-and-territories&uri=http://linked.data.gov.au/def/australian-states-and-territories$1" [R=302,NE,L]
+
+        # https://linked.data.gov.au/def/bc-labels
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/bc-labels(.*)$                  https://idn-au.github.io/lc-vocs/bc-labels.ttl [R=302,L]
+        RewriteRule ^/def/bc-labels(.*).ttl$              https://idn-au.github.io/lc-vocs/bc-labels.ttl [R=302,L]
+        RewriteRule ^/def/bc-labels(.*)$                  https://idn-au.github.io/lc-vocs/bc-labels.html$1 [R=302,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -426,6 +454,12 @@
         RewriteRule ^/def/site-status(.*)$ "https://vocabs.gsq.digital/object?vocab_id=site-status&uri=http://linked.data.gov.au/def/site-status$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/site-status(.*)$ "https://vocabs.gsq.digital/object?vocab_id=site-status&uri=http://linked.data.gov.au/def/site-status$1" [R=302,NE,L]
 
+	# see also main entry for /def/supermodel in Ontologies
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/supermodel/terms(.*)$ "https://agldwg.github.io/supermodel-terms-vocab$1" [R=302,L]
+        RewriteRule ^/def/supermodel/terms(.*)$ "https://agldwg.github.io/supermodel-terms-vocab$1" [R=302,NE,L]
+
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/survey-detail-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=survey-detail-type&uri=http://linked.data.gov.au/def/survey-detail-type$1&_mediatype=text/turtle" [R=302,L]
@@ -455,6 +489,13 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/telephone-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=telephone-type&uri=http://linked.data.gov.au/def/telephone-type$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/telephone-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=telephone-type&uri=http://linked.data.gov.au/def/telephone-type$1" [R=302,NE,L]
+
+        # https://linked.data.gov.au/def/tk-labels
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/tk-labels(.*)$                  https://idn-au.github.io/lc-vocs/tk-labels.ttl [R=302,L]
+        RewriteRule ^/def/tk-labels(.*).ttl$              https://idn-au.github.io/lc-vocs/tk-labels.ttl [R=302,L]
+        RewriteRule ^/def/tk-labels(.*)$                  https://idn-au.github.io/lc-vocs/tk-labels.html$1 [R=302,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
