LocI Datasets updated to Digital Atlas of Aust APIs

--- a/conf/linked.data.gov.au-datasets.conf
+++ b/conf/linked.data.gov.au-datasets.conf
@@ -42,6 +42,26 @@
         RewriteRule ^/dataset/asgs2016/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
 
+# http://linked.data.gov.au/dataset/asgsed3
+# Dataset
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/asgsed3$                          https://asgs.linked.fsdf.org.au/dataset/asgsed3?_profile=dcat&_mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/asgsed3.ttl$                      https://asgs.linked.fsdf.org.au/dataset/asgsed3?_profile=dcat&_mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/asgsed3$                          https://asgs.linked.fsdf.org.au/dataset/asgsed3 [R=302,L]
+# Feature Collections
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/asgsed3/([A-Z0-9]+)$                     https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1?_profile=geo&_mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/asgsed3/([A-Z0-9]+).ttl$                 https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1?_profile=geo&_mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/asgsed3/([A-Z0-9]+)$                     https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1 [R=302,L]
+# Features
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/asgsed3/(.*)/(.*)$                https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1/items/$2?_profile=geo&mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/asgsed3/(.*)/(.*).ttl$            https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1/items/$2?_profile=geo&mediatype=text/turtle [R=302,L]
+RewriteRule ^/dataset/asgsed3/(.*)/(.*)$                https://asgs.linked.fsdf.org.au/dataset/asgsed3/collections/$1/items/$2 [R=302,L]
+
         # http://linked.data.gov.au/dataset/auspix
         # Dataset
         # whole-of-dataset
@@ -106,26 +126,46 @@
         RewriteRule ^/dataset/energy/$                          https://near.csiro.au/assets/ [R=302,L]
         RewriteRule ^/dataset/energy/(.*)$                      https://near.csiro.au/assets/$1 [R=302,L]
 
+	# http://linked.data.gov.au/dataset/gnaf
+        # Dataset
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/gnaf$                            "http://gnaf.linked.fsdf.org.au/dataset/gnaf?_profile=dcat&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/gnaf.ttl$                        "http://gnaf.linked.fsdf.org.au/dataset/gnaf?_profile=dcat&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/gnaf$                            https://gnaf.linked.fsdf.org.au/dataset/gnaf [R=302,L]
+	# Address, Address Site, Locality, Street Locality Feature Collections
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1" [R=302,L]
+	# Address, Address Site, Locality, Street Locality Features
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
+	RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*).ttl$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2?_profile=geo&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/gnaf/(address|addressSite|locality|streetLocality)/(.*)$ "https://gnaf.linked.fsdf.org.au/dataset/gnaf/collections/$1/items/$2" [R=302,L]
+
 
         # http://linked.data.gov.au/dataset/geofabric
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/geofabric$                        https://geofabricld.net/index.ttl? [R=302,L]
-        RewriteRule ^/dataset/geofabric.ttl$                    https://geofabricld.net/index.ttl [R=302,L]
-        RewriteRule ^/dataset/geofabric$                        https://geofabricld.net  [R=302,L]
-        # Top-level Registers
+        RewriteRule ^/dataset/geofabric$                            "http://geofabric.linked.fsdf.org.au/dataset/geofabric?_profile=dcat&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/geofabric.ttl$                        "http://geofabric.linked.fsdf.org.au/dataset/geofabric?_profile=dcat&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/geofabric$                            https://geofabric.linked.fsdf.org.au/dataset/geofabric [R=302,L]
+        # Drainage Division, River Region & Catchement Feature Collections
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/geofabric/(.*)/$                  https://geofabricld.net/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/geofabric/(.*)/index.ttl$         https://geofabricld.net/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/geofabric/(.*)/$                  https://geofabricld.net/$1/ [R=302,L]
-        # sub-dataset objects
+        RewriteRule ^/dataset/geofabric/fc/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/geofabric/fc/(drainagedivisions|riverregions|catchments).ttl$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1?_profile=geo&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/geofabric/fc/(drainagedivisions|riverregions|catchments)$ "https://geofabric.linked.fsdf.org.au/dataset/geofabric/collections/$1" [R=302,L]
+        # Drainage Division, River Region & Catchement
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/geofabric/(.*)$                   https://geofabricld.net/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/geofabric/(.*).ttl$               https://geofabricld.net/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/geofabric/(.*)$                   https://geofabricld.net/$1 [R=302,L]
+        RewriteRule ^/dataset/geofabric/hydroid/(.*)$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}%{REQUEST_URI}&_profile=geo&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/geofabric/hydroid/(.*).ttl$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}%{REQUEST_URI}&_profile=geo&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/geofabric/hydroid/(.*)$ "https://geofabric.linked.fsdf.org.au/object?uri=https://%{HTTP_HOST}%{REQUEST_URI}" [R=302,L]
 
 
 	# http://linked.data.gov.au/dataset/qldgeofeatures
@@ -149,50 +189,6 @@
         RewriteRule ^/dataset/qldgeofeatures/(.*)$                  https://gsq.cat/qldgeofeatures/feature/$1 [R=302,L]	
 
                         
-        # http://linked.data.gov.au/dataset/gnaf
-        # Dataset
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf$                             https://gnafld.net/index.ttl? [R=302,L]
-        RewriteRule ^/dataset/gnaf.ttl$                         https://gnafld.net/index.ttl [R=302,L]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf$                             https://gnafld.net/index.ttl [R=302,L]
-        RewriteRule ^/dataset/gnaf$                             https://gnafld.net  [R=302,L]
-        # Top-level Registers
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf/(.*)/$                       https://gnafld.net/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf/(.*)/index.ttl$              https://gnafld.net/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf/(.*)/$                       https://gnafld.net/$1/ [R=302,L]
-        # sub-dataset objects
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf/(.*)$                        https://gnafld.net/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf/(.*).ttl$                    https://gnafld.net/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf/(.*)$                        https://gnafld.net/$1 [R=302,L]
-
-
-        # http://linked.data.gov.au/dataset/gnaf-2016-05
-        # Dataset
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf-2016-05$                     https://gnafld.net/2016-05/index.ttl? [R=302,L]
-        RewriteRule ^/dataset/gnaf-2016-05.ttl$                 https://gnafld.net/2016-05/index.ttl [R=302,L]
-        RewriteRule ^/dataset/gnaf-2016-05$                     https://gnafld.net/2016-05  [R=302,L]
-        # Top-level Registers
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf-2016-05/(.*)/$               https://gnafld.net/2016-05/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf-2016-05/(.*)/index.ttl$      https://gnafld.net/2016-05/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf-2016-05/(.*)/$               https://gnafld.net/2016-05/$1/ [R=302,L]
-        # sub-dataset objects
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf-2016-05/(.*)$                https://gnafld.net/2016-05/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf-2016-05/(.*).ttl$            https://gnafld.net/2016-05/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/gnaf-2016-05/(.*)$                https://gnafld.net/2016-05/$1 [R=302,L]
-
-
         # http://linked.data.gov.au/dataset/placenames
         # Dataset
 	# whole-of-dataset
