ABIS ontology added; LocI onts updated

--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -2,6 +2,17 @@
         #	Ontologies
         #
 
+	# http://linked.data.gov.au/def/abis
+        RewriteRule ^/def/abis/overview$                       https://ausbigg.github.io/abis/overview.html [R=302,L]
+	RewriteRule ^/def/abis/specification$                  https://ausbigg.github.io/abis/specification.html [R=302,L]
+	RewriteRule ^/def/abis/validator$                      https://ausbigg.github.io/abis/validator.ttl [R=302,L]
+
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/abis$                                https://ausbigg.github.io/abis/profile.ttl [R=302,L]
+        RewriteRule ^/def/abis.ttl$                            https://ausbigg.github.io/abis/profile.ttl [R=302,L]
+	RewriteRule ^/def/abis$                                https://ausbigg.github.io/abis/standard.html [R=302,L]
+
         # http://linked.data.gov.au/def/agop
 	RewriteRule ^/def/agop/spec$			       https://raw.githack.com/AGLDWG/agop/master/specification.html [R=302,L]
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -70,9 +81,9 @@
         # http://linked.data.gov.au/def/auspix
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/auspix(.*)$                             https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.ttl? [R=302,L]
-        RewriteRule ^/def/auspix(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.ttl [R=302,L]
-        RewriteRule ^/def/auspix(.*)$                             https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.html$1 [R=302,L]
+        RewriteRule ^/def/auspix(.*)$                             https://geoscienceaustralia.github.io/AusPIX-DGGS-ontology/auspix.ttl? [R=302,L]
+        RewriteRule ^/def/auspix(.*).ttl$                         https://geoscienceaustralia.github.io/AusPIX-DGGS-ontology/auspix.ttl [R=302,L]
+        RewriteRule ^/def/auspix(.*)$                             https://geoscienceaustralia.github.io/AusPIX-DGGS-ontology/auspix.html$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/borehole
@@ -166,6 +177,8 @@
         RewriteRule /def/fsdf/dp/feature-validator	https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/feature-validator.ttl [R=302,L]
         RewriteRule /def/fsdf/dp/multi-validator	https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/multi-validator.ttl [R=302,L]
 	RewriteRule /def/fsdf/dp/repo			https://github.com/surroundaustralia/fsdf-kg [R=302,L]
+
+	RewriteRule /def/fsdf-supermodel(.*)		https://geoscienceaustralia.github.io/fsdf-supermodel/supermodel.html$1 [R=302,L]
 
 	# Ontology
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -305,31 +318,43 @@
         # http://linked.data.gov.au/def/geox
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geox                                  https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl? [R=302,L]
-        RewriteRule ^/def/geox(.*).ttl$                         https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.ttl [R=302,L]
+        RewriteRule ^/def/geox                                  https://csiro-enviro-informatics.github.io/geosparql-ext-ont/geox.ttl? [R=302,L]
+        RewriteRule ^/def/geox(.*).ttl$                         https://csiro-enviro-informatics.github.io/geosparql-ext-ont/geox.ttl [R=302,L]
         RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
         RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
-        RewriteRule ^/def/geox                                  https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.rdf? [R=302,L]
-        RewriteRule ^/def/geox(.*).rdf$                         https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.rdf [R=302,L]
+        RewriteRule ^/def/geox                                  https://csiro-enviro-informatics.github.io/geosparql-ext-ont/geox.rdf? [R=302,L]
+        RewriteRule ^/def/geox(.*).rdf$                         https://csiro-enviro-informatics.github.io/geosparql-ext-ont/geox.rdf [R=302,L]
         RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
         RewriteCond %{HTTP:Accept} application/ld\+json [NC]
-        RewriteRule ^/def/geox                                  https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.jsonld? [R=302,L]
-        RewriteRule ^/def/geox(.*).jsonld$                      https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.jsonld [R=302,L]
-        RewriteRule ^/def/geox(.*)$                             https://raw.githack.com/CSIRO-enviro-informatics/geosparql-ext-ont/master/geox.html$1 [R=302,L]
+        RewriteRule ^/def/geox                                  https://csiro-enviro-informatics.github.io/geosparql-ext-ont/geox.jsonld? [R=302,L]
+        RewriteRule ^/def/geox(.*).jsonld$                      https://csiro-enviro-informatics.github.io/geosparql-ext-ont/geox.jsonld [R=302,L]
+        RewriteRule ^/def/geox(.*)$                             https://csiro-enviro-informatics.github.io/geosparql-ext-ont/geox.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/gnaf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/gnaf(.*)$                             http://gnafld.net/def/gnaf$1.ttl? [R=302,L]
-        RewriteRule ^/def/gnaf(.*).ttl$                         http://gnafld.net/def/gnaf$1.ttl [R=302,L]
-        RewriteRule ^/def/gnaf(.*)$                             http://gnafld.net/def/gnaf$1 [R=302,L]
+        RewriteRule ^/def/gnaf(.*)$                             https://agldwg.github.io/gnaf-ont/gnaf.ttl? [R=302,L]
+        RewriteRule ^/def/gnaf(.*).ttl$                         https://agldwg.github.io/gnaf-ont/gnaf.ttl [R=302,L]
+        RewriteRule ^/def/gnaf(.*)$                             https://agldwg.github.io/gnaf-ont/gnaf.html$1 [R=302,L]
+
+        # http://linked.data.gov.au/def/idncp
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+        RewriteRule ^/def/idncp$                    https://idn-au.github.io/idn-catalogue-profile/profile.ttl [R=302,L]
+        RewriteRule ^/def/idncp.ttl$                https://idn-au.github.io/idn-catalogue-profile/profile.ttl [R=302,L]
+        RewriteRule ^/def/idncp$                    https://idn-au.github.io/idn-catalogue-profile/profile.html [R=302,L]
+        RewriteRule ^/def/idncp/spec                https://idn-au.github.io/idn-catalogue-profile/specification.html [R=302,L]
+	RewriteRule ^/def/idncp/validator           https://idn-au.github.io/idn-catalogue-profile/validator.shacl.ttl [R=302,L]
+        RewriteRule ^/def/idncp/validator-compounded           https://idn-au.github.io/idn-catalogue-profile/validator-compounded.shacl.ttl [R=302,L]
+        RewriteRule ^/def/idncp/repo                https://github.com/idn-au/idn-catalogue-profile/ [R=302,L]
+
 
         # http://linked.data.gov.au/def/irg
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/irg(.*)$                             https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl? [R=302,L]
-        RewriteRule ^/def/irg(.*).ttl$                         https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl$1 [R=302,L]
-        RewriteRule ^/def/irg(.*)$                             https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.html$1 [R=302,L]
+        RewriteRule ^/def/irg(.*)$                              https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl? [R=302,L]
+        RewriteRule ^/def/irg(.*).ttl$                          https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl$1 [R=302,L]
+        RewriteRule ^/def/irg(.*)$                              https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/iso19160-1-address-nz-profile
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -361,17 +386,17 @@
         # http://linked.data.gov.au/def/loci
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/loci                                  https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.ttl? [R=302,L]
-        RewriteRule ^/def/loci(.*).ttl$                         https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.ttl [R=302,L]
+        RewriteRule ^/def/loci                                  https://csiro-enviro-informatics.github.io/loci-ont/loci.ttl? [R=302,L]
+        RewriteRule ^/def/loci(.*).ttl$                         https://csiro-enviro-informatics.github.io/loci-ont/loci.ttl [R=302,L]
         RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
         RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
-        RewriteRule ^/def/loci                                  https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.rdf? [R=302,L]
-        RewriteRule ^/def/loci(.*).rdf$                         https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.rdf [R=302,L]
+        RewriteRule ^/def/loci                                  https://csiro-enviro-informatics.github.io/loci-ont/loci.rdf? [R=302,L]
+        RewriteRule ^/def/loci(.*).rdf$                         https://csiro-enviro-informatics.github.io/loci-ont/loci.rdf [R=302,L]
         RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
         RewriteCond %{HTTP:Accept} application/ld\+json [NC]
-        RewriteRule ^/def/loci                                  https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.jsonld? [R=302,L]
-        RewriteRule ^/def/loci(.*).jsonld$                      https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.jsonld [R=302,L]
-        RewriteRule ^/def/loci(.*)$                             https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.html$1 [R=302,L]
+        RewriteRule ^/def/loci                                  https://csiro-enviro-informatics.github.io/loci-ont/loci.jsonld? [R=302,L]
+        RewriteRule ^/def/loci(.*).jsonld$                      https://csiro-enviro-informatics.github.io/loci-ont/loci.jsonld [R=302,L]
+        RewriteRule ^/def/loci(.*)$                             https://csiro-enviro-informatics.github.io/loci-ont/loci.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/geoadminfeatures
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -383,9 +408,9 @@
         # http://linked.data.gov.au/def/geofabric
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geofabric                             https://raw.githack.com/CSIRO-enviro-informatics/geofabric-ont/master/geofabric.ttl? [R=302,L]
-        RewriteRule ^/def/geofabric.ttl$                        https://raw.githack.com/CSIRO-enviro-informatics/geofabric-ont/master/geofabric.ttl [R=302,L]
-        RewriteRule ^/def/geofabric(.*)$                        https://raw.githack.com/CSIRO-enviro-informatics/geofabric-ont/master/geofabric.html$1 [R=302,L]
+        RewriteRule ^/def/geofabric                             https://csiro-enviro-informatics.github.io/geofabric-ont//geofabric.ttl? [R=302,L]
+        RewriteRule ^/def/geofabric.ttl$                        https://csiro-enviro-informatics.github.io/geofabric-ont//geofabric.ttl [R=302,L]
+        RewriteRule ^/def/geofabric(.*)$                        https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.html$1 [R=302,L]
 
 	# Dept Ag, Water & Environment's Plant Health Surveillance ontology
         # http://linked.data.gov.au/def/phs
@@ -411,11 +436,11 @@
         # http://linked.data.gov.au/def/placenames
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/placenames(.*)$                       https://raw.githack.com/GeoscienceAustralia/Placenames-Ontology/master/placenames.ttl? [R=302,L]
-        RewriteRule ^/def/placenames.ttl$                       https://raw.githack.com/GeoscienceAustralia/Placenames-Ontology/master/placenames.ttl [R=302,L]
-        RewriteRule ^/def/placenames/?$                         https://raw.githack.com/GeoscienceAustralia/Placenames-Ontology/master/placenames.html [R=302,L]	
+        RewriteRule ^/def/placenames(.*)$                       https://geoscienceaustralia.github.io/Placenames-Ontology/placenames.ttl? [R=302,L]
+        RewriteRule ^/def/placenames.ttl$                       https://geoscienceaustralia.github.io/Placenames-Ontology/placenames.ttl [R=302,L]
+        RewriteRule ^/def/placenames/?$                         https://geoscienceaustralia.github.io/Placenames-Ontology/placenames.html [R=302,L]	
         RewriteMap tolower int:tolower
-        RewriteRule ^/def/placenames/(.*)$                      https://raw.githack.com/GeoscienceAustralia/Placenames-Ontology/master/placenames.html\#${tolower:$1} [R=302,L,NE]
+        RewriteRule ^/def/placenames/(.*)$                      https://geoscienceaustralia.github.io/Placenames-Ontology/placenames.html\#${tolower:$1} [R=302,L,NE]
 
         # http://linked.data.gov.au/def/plot
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -436,13 +461,17 @@
 
 
         # http://linked.data.gov.au/def/su
-        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
-        RewriteRule ^/def/su/ont(.*).ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
-        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.html [R=303,L]
-        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
-        RewriteRule ^/def/su.ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
-        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.html [R=303,L]
+#        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+#        RewriteCond %{HTTP:Accept} text/turtle [NC]
+#        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
+#        RewriteRule ^/def/su/ont(.*).ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
+#        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.html [R=303,L]
+#        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+#        RewriteCond %{HTTP:Accept} text/turtle [NC]
+#        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
+#        RewriteRule ^/def/su.ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
+#        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.html [R=303,L]
+
+        # https://linked.data.gov.au/def/supermodel
+        RewriteRule ^/def/supermodel$                         https://nicholascar.com/supermodel/ [R=303,L]
+
