proxy to old lab API disabled; all redirected to non-resolving

--- a/conf/lab.environment.data.gov.au.conf
+++ b/conf/lab.environment.data.gov.au.conf
@@ -7,15 +7,17 @@
 
         Options Includes FollowSymLinks MultiViews
 
-	RewriteRule ^/robots.txt /var/www/html/robots.txt [L]
+	# RewriteRule ^/robots.txt /var/www/html/robots.txt [L]
 
-        <Location />
-                ProxyPass http://130.56.251.47/ keepalive=On
-                ProxyPassReverse http://130.56.251.47/
-
-                SetOutputFilter INFLATE;proxy-html;DEFLATE
-                ProxyHTMLURLMap css/ http://130.56.251.47/css/
-                ProxyHTMLURLMap images/ http://130.56.251.47/images/
-        </Location>
+	RewriteEngine on
+	RewriteRule . https://www.linked.data.gov.au/nonresolving [R=302,L]
+        #<Location />
+        #        ProxyPass http://130.56.251.47/ keepalive=On
+        #        ProxyPassReverse http://130.56.251.47/
+	#
+        #        SetOutputFilter INFLATE;proxy-html;DEFLATE
+        #        ProxyHTMLURLMap css/ http://130.56.251.47/css/
+        #        ProxyHTMLURLMap images/ http://130.56.251.47/images/
+        #</Location>
 </VirtualHost>
 
