--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -6,12 +6,16 @@
 # All patterns here will be built up from approved entries in the AGLDWG PID Allocations Catalogue (http://catalogue.linked.data.gov.au/)
 # Nick Car, 13/08/2018
 #
-<VirtualHost *>
-        ServerName linked.data.gov.au
+<VirtualHost *:80>
+    # ServerName linked.data.gov.au
+    ServerAdmin nicholas.car@anu.edu.au
 
-        RewriteEngine  on
+    RewriteEngine  on
 
-        # HTTPS redirect
-        RewriteCond %{SERVER_NAME} =linked.data.gov.au
-        RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+    # w3id.org redirects managed by the AGLDWG
+    Include /etc/apache2/sites-available/w3id.org.conf
+
+    # HTTPS redirect
+    RewriteCond %{SERVER_NAME} =linked.data.gov.au
+    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
