improved AGLDWG website exclusions

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -16,6 +16,7 @@
 	#	CORS
 	Header set Access-Control-Allow-Origin "*"
 
+	
         #
         #	PIDs
         #
@@ -34,10 +35,10 @@
 
 	# AGLDWG website
 	RewriteRule ^/?$									https://www.linked.data.gov.au [L,R=302]
-	RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join)$	http://www.linked.data.gov.au/$1 [L,R=302]
+	RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join|nonresolving|nosuch|404)$	http://www.linked.data.gov.au/$1 [L,R=302]
 
 	# final 404 rule for non-existent PID
-	ErrorDocument 404 http://203.100.30.55/404.html
+	ErrorDocument 404 http://www.linked.data.gov.au//404.html
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteRule (.*) - [R=404]  # L included by default for 300 < R > 399
 
