tidy catalogue SSL cert details

--- a/conf/catalogue.linked.data.gov.au-le-ssl.conf
+++ b/conf/catalogue.linked.data.gov.au-le-ssl.conf
@@ -8,8 +8,10 @@
         ProxyPassReverse "/"  "http://203.101.231.11/"
         Header edit Location ^http://catalogue\.linked\.data\.gov\.au(.*)$ https://catalogue.linked.data.gov.au$1
 
-Include /etc/letsencrypt/options-ssl-apache.conf
-SSLCertificateFile /etc/letsencrypt/live/catalogue.linked.data.gov.au/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/catalogue.linked.data.gov.au/privkey.pem
+
+        # Let's Encrypt Certificate details
+        Include /etc/letsencrypt/options-ssl-apache.conf
+        SSLCertificateFile /etc/letsencrypt/live/catalogue.linked.data.gov.au/fullchain.pem
+        SSLCertificateKeyFile /etc/letsencrypt/live/catalogue.linked.data.gov.au/privkey.pem
 </VirtualHost>
 </IfModule>
