--- a/conf/catalogue.linked.data.gov.au.conf
+++ b/conf/catalogue.linked.data.gov.au.conf
@@ -4,7 +4,7 @@
 #
 # Copy 'n paste from previous PID Proxy server Apache file. Nick Car, 13/08/2018
 #
-<VirtualHost *>
+<VirtualHost *:80>
         ServerName catalogue.linked.data.gov.au
 
         RewriteEngine  on
