add GNAF codes vocabs within GNAF dataset namespace

--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -63,7 +63,6 @@
         RewriteRule ^/def/corveg-cv(.*)                         https://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
         RewriteRule ^/def/corveg-cv(.*)                         https://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
     
-
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -78,6 +77,14 @@
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
         RewriteRule ^/def/gba(.*).rdf$                          http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1 [R=302,L]
+
+        # https://linked.data.gov.au/dataset/gnaf/code/*
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/gnaf/code/(.+)$                  "https://linked.fsdf.org.au/vocab/$1?_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/gnaf/code/(.+).ttl$              "https://linked.fsdf.org.au/vocab/$1?_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/gnaf/code/(.+)$                  https://linked.fsdf.org.au/vocab/$1 [R=302,L]
+
 
 	# https://linked.data.gov.au/def/idn-role-codes
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
